[package]
name        = "mde-shell-egui"
description = "MCNF E12 \"Quasar\" — the single egui shell (E12-3). One eframe app on the mde-egui harness: a thin persistent chrome bar (peers · sessions · status + an Expand toggle) over a central view that is either the session EmptyState (collapsed — a real session is a VM texture from mde-vdi, a later unit) or the Workbench five-plane nav (expanded). The skeleton the panels (Workbench/Files/Music/Voice) and the VM session-view plug into."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mde-shell-egui"
path = "src/main.rs"

[features]
# E12-3 — the DRM/KMS bare-seat backend. Build `mde-shell-egui --features drm` to
# ship the shell that OWNS the seat directly (no compositor, no display manager).
# OFF by default so the workspace build stays portable — the native DRM stack
# (libdrm/gbm/egl/libinput/udev) is pulled only for the shipped shell binary;
# `main.rs` falls back to the windowed eframe client when the feature is off or no
# DRM master is present.
drm = ["mde-egui/drm"]

# BOOKMARKS-6 live path — turn on the client crate's `live-helper` spawn API so the
# Browser surface really `Command::spawn`s the sandboxed `mde-web-preview` helper on
# first open (honest-gated to a usable seat + an installed helper binary). OFF by
# default so the default build stays portable and the surface shows its honest gated
# EmptyState; ON, the surface renders a live sandboxed Servo page (§7). Mirrors the
# client crate's own `live-helper` gate, exactly as the VDI crates gate live-connect.
live-helper = ["mde-web-preview-client/live-helper"]

[dependencies]
# The §4/§5 harness is the shell's primary inward dependency (§6 layered tiers):
# it provides run_client (the eframe Wayland-client runner), the shared Style, the
# Motion table, and re-exports egui/eframe so the shell shares one toolkit
# resolution.
mde-egui = { path = "../../shared/mde-egui" }

# QBRAND-1 — the single brand/build-identity source. `main.rs` routes
# `--version` through `mde_theme::brand::build::full()` (and the chrome/splash +
# About read `version_line()`/`full()`), so the shell never hand-rolls a version
# string. A toolkit-free leaf crate; the edge points inward (§6).
mde-theme = { path = "../../shared/mde-theme" }

# MV-6 — the Fleet plane subscribes to the mackesd virt workers' Bus topics
# (`event/kvm/services` / `event/vm/instances`) and publishes host-targeted
# `action/vm/lifecycle` requests via the persist-first publish path. mde-bus is
# the platform-services tier; the dependency edge points inward (§6).
mde-bus = { path = "../../platform/mde-bus" }

# The Bus payloads are a JSON boundary: the Fleet plane mirrors the worker
# payloads with local serde structs rather than depending on the mackesd daemon
# crate (keeps the shell in the desktop-shell tier).
serde      = { workspace = true }
serde_json = { workspace = true }

# CHOOSER-9 — the Desktop Chooser's mesh-synced favorites/recents/manual sources
# (`chooser/chooser_prefs.rs`) roam per mesh identity over the Syncthing-replicated
# workgroup root. This one leaf type crate supplies the canonical
# `default_workgroup_root()` (never a hardcoded /mnt/mesh-storage) — the same seam
# MEDIA-16's session roaming reuses. A mesh-tier registry crate of pure types; the
# dependency edge points inward (§6), carrying no daemon dependency.
mackes-mesh-types = { path = "../../mesh/mackes-mesh-types" }

# BRAND-1 — the empty-desktop brand backdrop (`backdrop.rs`) decodes the embedded
# 1270² RGBA logo lockup once to a cached egui texture. `png` is the lean decoder
# `mde-files` already builds thumbnails on; a leaf registry crate, so it adds no
# tier edge (§6 — the layered-tiers gate only flags outward workspace deps).
# CHOOSER-3 reuses the same decoder for the Chooser card thumbnails (`chooser.rs`).
png = "0.18"

# CHOOSER-3 — the Desktop Chooser's periodic preview thumbnails travel inline in
# the `state/desktops/sources` record as `data:image/png;base64,…` snapshot refs
# (a mesh peer's published snapshot rides the replicated state plane); the shell
# base64-decodes the ref before the `png` decode. Same 0.22 pin the mackesd + music
# workers already vendor; a leaf registry crate, no tier edge (§6).
base64 = "0.22"

# The chrome bar's live Peers + Status fold the world-readable mesh-status
# snapshot, reusing the render-agnostic LIGHTHOUSE-7 model
# (`lighthouse_health_from_snapshot` / `LighthouseHealth`) so the bar's health
# verdict can't diverge from the fleet's. `default-features = false` drops the
# applet's Cosmic-era panel shell (E12 retires that toolkit) — only the pure logic
# layer compiles in. platform tier; the edge points inward (§6), the same reuse
# the egui panel client (mde-panel-egui) makes.
mde-cosmic-applet = { path = "../../platform/mde-cosmic-applet", default-features = false }

# E12-3b EMBED — the three polished mesh-control surfaces are mounted as in-shell
# panels (Quasar §5: panels in the one shell, not separate clients). Each is a
# desktop-shell-tier lib the shell owns the App of and drives per-frame (pump +
# header + `*_panel`). The dependency edge points sideways-inward within the
# desktop-shell tier (§6) — the same toolkit resolution (`mde-egui`) flows through.
mde-music-egui = { path = "../mde-music-egui" }
mde-files-egui = { path = "../mde-files-egui" }
mde-voice-egui = { path = "../mde-voice-egui" }
# EDITOR-9 — the render-agnostic `mde-files` core (consumed WITHOUT its Cosmic-era
# GUI, like mde-files-egui does), for the `EditorLaunchWatch` that drains the Files
# "Send-to-Editor" `action/editor/open` verb into the shell's Editor surface.
mde-files = { path = "../../services/mde-files", default-features = false, features = ["dbus"] }
# OW-10 — the Surface::MeshView "Mesh Map": the egui reincarnation of MESHMAP. The
# shell folds the world-readable mesh-status snapshot into `mde_mesh_view::MeshState`
# and hands it to the `MeshView` painter each frame (the shell is its first caller).
# A pure desktop-shell-tier canvas widget over the shared `mde-egui` harness — no
# mesh-substrate dependency — so the edge points sideways-inward within the tier (§6).
mde-mesh-view = { path = "../mde-mesh-view" }
# MEDIA-18 — the Surface::Media player, mounted exactly like Music/Files/Voice: the
# shell holds its production `MediaSurface` (a `MediaController` over the default
# engine, built by `real_media()`) and drives it per-frame (pump + header + panel)
# over the real `mde_media_core` backend. Desktop-shell tier; the edge points
# sideways-inward, sharing the one `mde-egui` toolkit resolution (§6).
mde-media-egui = { path = "../mde-media-egui" }
# TERM-16 — the Surface::Terminal surface, mounted exactly like Media: the shell
# holds its production `TerminalSurface` (the TERM-4/5/8 `TabbedTerminal` over a
# real local PTY, built by `real_terminal()`) and drives it per-frame (pump +
# panel). This is the RESCUE that makes the whole TERM epic reachable — before it,
# `mde-term-egui` was mounted nowhere. Desktop-shell tier; the edge points
# sideways-inward, sharing the one `mde-egui` toolkit resolution (§6).
mde-term-egui = { path = "../mde-term-egui" }
# EDITOR-1 — the Surface::Editor surface, mounted exactly like Files/Terminal: the
# shell holds its `EditorSurface` (built by `real_editor()`) and renders it per-
# frame with `editor_panel`. EDITOR-1 is the mountable scaffold (the honest §7
# empty state until the rope buffer + text widget land in EDITOR-2/3); this dep
# makes the code-editor surface reachable from the dock. Desktop-shell tier; the
# edge points sideways-inward, sharing the one `mde-egui` toolkit resolution (§6).
mde-editor-egui = { path = "../mde-editor-egui" }

# E12-5a — the VDI Desktop surface. These two decoder crates turn a remote RDP /
# VNC framebuffer into an egui `ColorImage` the shell uploads to a `TextureHandle`
# (lock 21, render egui-native — no external viewer). The shell's `vdi` panel is
# their first caller; the edge points sideways-inward within the desktop-shell
# tier (§6), sharing the one `mde-egui` toolkit resolution.
mde-vdi-rdp = { path = "../mde-vdi-rdp" }
mde-vdi-vnc = { path = "../mde-vdi-vnc" }

# E12-7 — the Instances surface. The local cloud-hypervisor VM broker: the shell's
# `instances` panel is its first caller (the reachability fix E12-5a made for the
# VDI crates). It drives mde-kvm's create/boot/shutdown lifecycle over the VM's
# api-socket; the live VMM stays gated behind mde-kvm's own transport seam. The
# edge points inward to the services tier (§6).
mde-kvm = { path = "../../services/mde-kvm" }

# NOTIFY-CHAT-3 — the Surface::Chat ICQ UI renders the pure `mde-chat` model
# (Roster / Contact / Presence / Message / MessageKind) it reads off the Bus
# state topics (`state/chat/roster`, `state/chat/conversation/<key>`). The GUI is
# a pure renderer over the chat worker's read-model — it never depends on the
# mackesd daemon crate (§6 mesh/desktop boundary; the Bus JSON is the seam), just
# on the shared services-tier model. The edge points inward (§6).
mde-chat = { path = "../../services/mde-chat" }

# E12-15 — the Surface::System seat panel + the three read-only chrome status
# icons render from `mde-seat`, the ONE hardware-access library (lock 1). The
# shell consumes its typed `Seat::snapshot()` directly, in-process; every section
# is a `Probe` so an absent backend renders honestly (§7). Desktop-shell tier —
# the edge points sideways-inward within the tier (§6), sharing the one `mde-egui`
# toolkit resolution.
mde-seat = { path = "../mde-seat" }

# CURTAIN-3 — the logind session Lock/Unlock listener (`lock_signal.rs`). The
# DM-less shell has no screensaver daemon to catch `loginctl lock-session`, so it
# subscribes to logind's session signals directly over the system bus and drops its
# in-process curtain. mde-seat already builds this exact zbus (5, tokio + blocking
# API), so cargo unifies to one artifact — no new toolchain surface. The match/
# forward is the ONLY direct D-Bus the shell does; every other seat call routes
# through mde-seat (lock 1). Standard `org.freedesktop.login1` interop (§2 FDO
# exception), matching mde-seat's build.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }

# BOOKMARKS-6 — the Surface::Browser IPC + shm texture bridge. The shell's `web`
# panel is this crate's first caller: it spawns the sandboxed `mde-web-preview`
# helper per session, drives it over the typed session socket, and uploads each
# paint-ready shm frame to an egui `TextureHandle` (the same decode→upload shape
# the VDI decoder crates use). The edge points sideways-inward within the
# desktop-shell tier (§6), sharing the one `mde-egui` toolkit resolution; it does
# NOT reach the workspace-excluded Servo helper crate — only the shared wire seam.
mde-web-preview-client = { path = "../mde-web-preview-client" }

[dev-dependencies]
# The Browser-surface render tests drive a real session over the client's
# in-process fake helper (a socketpair peer publishing a genuine MWP1 shm frame),
# so the panel's paint-ready → texture-upload + crash paths are exercised
# headlessly with no Servo process — the `testkit` feature gates that scaffolding
# out of the release build.
mde-web-preview-client = { path = "../mde-web-preview-client", features = ["testkit"] }

# The Mesh-Map co-editing watch test (EDITOR-COLLAB-3) drains a REAL `Persist`
# spool on a throwaway dir — the same tempdir seam the editor's BusTransport
# round-trip test uses. Already in the workspace lock, no new lock line.
tempfile = "3"

[lints]
workspace = true
