[package]
name        = "mde-shell-egui"
description = "MCNF E12 \"Construct\" — the single egui shell (E12-3). One eframe app on the mde-egui harness: a thin persistent chrome bar (peers · sessions · status + an Expand toggle) over a central view that is either the session EmptyState (collapsed — a real session is a VM texture from mde-vdi, a later unit) or the Workbench five-plane nav (expanded). The skeleton the panels (Workbench/Files/Music/Voice) and the VM session-view plug into."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mde-shell-egui"
path = "src/main.rs"

[features]
# E12-3 — the DRM/KMS bare-seat backend. Build `mde-shell-egui --features drm` to
# ship the shell that OWNS the seat directly (no compositor, no display manager).
# OFF by default so the workspace build stays portable — the native DRM stack
# (libdrm/gbm/egl/libinput/udev) is pulled only for the shipped shell binary;
# `main.rs` falls back to the windowed eframe client when the feature is off or no
# DRM master is present.
drm = ["mde-egui/drm"]

# BOOKMARKS-6 live path — turn on the client crate's `live-helper` spawn API so the
# Browser surface really `Command::spawn`s the sandboxed `mde-web-preview` helper on
# first open (honest-gated to a usable seat + an installed helper binary). OFF by
# default so the default build stays portable and the surface shows its honest gated
# EmptyState; ON, the surface renders a live sandboxed Servo page (§7). Mirrors the
# client crate's own `live-helper` gate, exactly as the VDI crates gate live-connect.
live-helper = ["mde-web-preview-client/live-helper"]

# E12-5 live VDI path — turn on the RDP crate's live IronRDP transport so the
# Desktop surface can attach a sealed external RDP endpoint and pump frames/input
# in-shell. OFF by default for portable unit builds; ON for shipped shell builds.
live-vdi = ["mde-vdi-rdp/live-connect", "mde-vdi-vnc/live-connect"]

# BUG-VIDEO-1 / MEDIA-2 phase 1 (docs/gpu_encoder.md) — turn on the real libmpv2
# engine for the embedded Media surface (MEDIA-18), forwarding straight through
# to `mde-media-egui/mpv` (which forwards to `mde-media-core/mpv`). OFF by
# default so the workspace build stays airgap-safe (no system libmpv needed);
# ON, `player_stage` paints real decoded frames instead of the placeholder rect.
# Honest-gated to a host with `mpv-libs-devel`, exactly like `drm`/`live-vdi`
# gate their own native stacks. Release builds must enable this alongside `drm`
# — see `release_shell_configuration_enables_the_real_media_engine` below,
# which fails loudly if a `drm` build ever ships without it (the exact
# "shipped player is FakeMpv" failure BUG-VIDEO-1 recorded).
media-mpv = ["mde-media-egui/mpv"]

[dependencies]
# The §4/§5 harness is the shell's primary inward dependency (§6 layered tiers):
# it provides run_client (the eframe Wayland-client runner), the shared Style, the
# Motion table, and re-exports egui/eframe so the shell shares one toolkit
# resolution.
mde-egui = { path = "../../shared/mde-egui", features = ["accesskit"] }

# QBRAND-1 — the single brand/build-identity source. `main.rs` routes
# `--version` through `mde_theme::brand::build::full()` (and the chrome/splash +
# About read `version_line()`/`full()`), so the shell never hand-rolls a version
# string. A toolkit-free leaf crate; the edge points inward (§6).
mde-theme = { path = "../../shared/mde-theme" }

# MV-6 — the Fleet plane subscribes to the mackesd virt workers' Bus topics
# (`event/kvm/services` / `event/vm/instances`) and publishes host-targeted
# `action/vm/lifecycle` requests via the persist-first publish path. mde-bus is
# the platform-services tier; the dependency edge points inward (§6).
mde-bus = { path = "../../platform/mde-bus" }

# The Bus payloads are a JSON boundary: the Fleet plane mirrors the worker
# payloads with local serde structs rather than depending on the mackesd daemon
# crate (keeps the shell in the desktop-shell tier).
serde      = { workspace = true }
serde_json = { workspace = true }

# CHOOSER-9 — the Desktop Chooser's mesh-synced favorites/recents/manual sources
# (`chooser/chooser_prefs.rs`) roam per mesh identity over the Syncthing-replicated
# workgroup root. This one leaf type crate supplies the canonical
# `default_workgroup_root()` (never a hardcoded /mnt/mesh-storage) — the same seam
# MEDIA-16's session roaming reuses. A mesh-tier registry crate of pure types; the
# dependency edge points inward (§6), carrying no daemon dependency.
mackes-mesh-types = { path = "../../mesh/mackes-mesh-types" }

# BRAND-1 — the empty-desktop brand backdrop (`backdrop.rs`) decodes the embedded
# 1270² RGBA logo lockup once to a cached egui texture. `png` is the lean decoder
# `mde-files` already builds thumbnails on; a leaf registry crate, so it adds no
# tier edge (§6 — the layered-tiers gate only flags outward workspace deps).
# CHOOSER-3 reuses the same decoder for the Chooser card thumbnails (`chooser.rs`).
png = "0.18"

# CHOOSER-3 — the Desktop Chooser's periodic preview thumbnails travel inline in
# the `state/desktops/sources` record as `data:image/png;base64,…` snapshot refs
# (a mesh peer's published snapshot rides the replicated state plane); the shell
# base64-decodes the ref before the `png` decode. Same 0.22 pin the mackesd + music
# workers already vendor; a leaf registry crate, no tier edge (§6).
base64 = "0.22"

# KDC-MESH-4 — the Phones hub renders an in-shell QR matrix for the enroll+pair
# payload. `qrcode` is a pure encoder; the shell paints its boolean matrix through
# egui rectangles, so no image stack or QR scanner dependency is pulled in.
qrcode = { version = "0.14", default-features = false }

# The chrome bar's live Peers + Status fold the world-readable mesh-status
# snapshot, reusing the render-agnostic LIGHTHOUSE-7 model
# (`lighthouse_health_from_snapshot` / `LighthouseHealth`) so the bar's health
# verdict can't diverge from the fleet's. `default-features = false` drops the
# applet's Cosmic-era panel shell (E12 retires that toolkit) — only the pure logic
# layer compiles in. platform tier; the edge points inward (§6), the same reuse
# the egui panel client (mde-panel-egui) makes.
mde-lighthouse-health = { path = "../../platform/mde-lighthouse-health", default-features = false }

# E12-3b EMBED — the three polished mesh-control surfaces are mounted as in-shell
# panels (Construct §5: panels in the one shell, not separate clients). Each is a
# desktop-shell-tier lib the shell owns the App of and drives per-frame (pump +
# header + `*_panel`). The dependency edge points sideways-inward within the
# desktop-shell tier (§6) — the same toolkit resolution (`mde-egui`) flows through.
mde-music-egui = { path = "../mde-music-egui" }
mde-files-egui = { path = "../mde-files-egui" }
mde-maps-location-egui = { path = "../mde-maps-location-egui" }
mde-bookmarks-egui = { path = "../mde-bookmarks-egui" }
# BOOKMARKS-BAR — the pure `mde-bookmarks` model (consumed WITHOUT its egui GUI,
# like mde-files below), so the Browser surface can deserialize the daemon's
# `state/bookmarks/collection` Collection snapshot into its own bookmarks-bar row.
mde-bookmarks = { path = "../../services/mde-bookmarks" }
# The render-agnostic `mde-files` core (consumed WITHOUT its Cosmic-era GUI, like
# mde-files-egui does) — the shell test harness builds against its
# backend/fileops/model types (`FakeFileOps`, `FileRow`, `OpId`).
mde-files = { path = "../../services/mde-files", default-features = false, features = ["dbus"] }
# OW-10 — the Surface::MeshView "Mesh Map": the egui reincarnation of MESHMAP. The
# shell folds the world-readable mesh-status snapshot into `mde_mesh_view::MeshState`
# and hands it to the `MeshView` painter each frame (the shell is its first caller).
# A pure desktop-shell-tier canvas widget over the shared `mde-egui` harness — no
# mesh-substrate dependency — so the edge points sideways-inward within the tier (§6).
mde-mesh-view = { path = "../mde-mesh-view" }
# MEDIA-18 — the Surface::Media player, mounted exactly like Music/Files/Voice: the
# shell holds its production `MediaSurface` (a `MediaController` over the default
# engine, built by `real_media()`) and drives it per-frame (pump + header + panel)
# over the real `mde_media_core` backend. Desktop-shell tier; the edge points
# sideways-inward, sharing the one `mde-egui` toolkit resolution (§6).
mde-media-egui = { path = "../mde-media-egui" }
# TERM-16 — the Surface::Terminal surface, mounted exactly like Media: the shell
# holds its production `TerminalSurface` (the TERM-4/5/8 `TabbedTerminal` over a
# real local PTY, built by `real_terminal()`) and drives it per-frame (pump +
# panel). This is the RESCUE that makes the whole TERM epic reachable — before it,
# `mde-term-egui` was mounted nowhere. Desktop-shell tier; the edge points
# sideways-inward, sharing the one `mde-egui` toolkit resolution (§6).
mde-term-egui = { path = "../mde-term-egui" }
# The `mde-editor-egui` crate. WL-FUNC-011 Phase-2 retired the standalone
# Surface::Editor shell mount (the editor now embeds in Communications Documents
# mode via `mde-collab-egui`), but the shell still consumes two of its render-
# agnostic modules directly: `collab_session` (the mesh_view live-collab wire
# types) and `spell` (the browser spell-checker). Desktop-shell tier; the edge
# points sideways-inward, sharing the one `mde-egui` toolkit resolution (§6).
mde-editor-egui = { path = "../mde-editor-egui" }

# E12-5a / CHOOSER-5 — the VDI Desktop surface. These decoder crates turn a
# remote RDP / VNC / SPICE framebuffer into an egui `ColorImage` the shell uploads
# to a `TextureHandle` (lock 21, render egui-native — no external viewer). The
# shell's `vdi` panel is their first caller; the edge points sideways-inward within
# the desktop-shell tier (§6), sharing the one `mde-egui` toolkit resolution.
mde-vdi-rdp = { path = "../mde-vdi-rdp" }
mde-vdi-vnc = { path = "../mde-vdi-vnc" }
mde-vdi-spice = { path = "../mde-vdi-spice" }
# perf-7 — the transport-neutral damage-rect types + the partial-upload slice math
# (`FrameDamage`, `sub_color_image`) the `vdi` panel uses to move only the changed
# sub-rectangles of a live desktop to the GPU. Same `mde-egui` toolkit resolution
# as the three backends, so `FrameDamage` names the one shared `ColorImage`.
mde-vdi-core = { path = "../mde-vdi-core" }

# The pure `mde-chat` model (Roster / Contact / Presence / Message / MessageKind)
# read off the Bus state topics (`state/chat/roster`, `state/chat/conversation/
# <key>`). WL-FUNC-011 Phase-2 retired the standalone Surface::Chat UI, but the
# shell still consumes the model: the `ChatState` poll feeds the tray action-
# center unread badge, and the Browser/Terminal share-to-chat producers construct
# `MessageKind` for `action/chat/send`. It never depends on the mackesd daemon
# crate (§6 mesh/desktop boundary; the Bus JSON is the seam), just the shared
# services-tier model. The edge points inward (§6).
mde-chat = { path = "../../services/mde-chat" }

# WL-FUNC-011 — the Surface::Communications live mount. `mde-collab-egui` is the
# pure `CommunicationsSurface` widget (Activity + Messages over the CollabReadModel
# projections); the shell hands it a Bus-backed `CollabData` folded off the
# `state/collab/*` mirrors and drains its `CommandSink` onto `action/collab/*`.
# `mde-collab-types` is the stable JSON contract (read models · CollabCommand ·
# topic builders) the fold + publish are written against — the shell never depends
# on the mackesd collab worker crate (the mesh/desktop boundary is the Bus JSON
# seam). Both edges point inward, sharing the one `mde-egui` toolkit resolution.
mde-collab-egui = { path = "../mde-collab-egui" }
mde-collab-types = { path = "../../shared/mde-collab-types" }

# E12-15 — the Surface::System seat panel + the three read-only chrome status
# icons render from `mde-seat`, the ONE hardware-access library (lock 1). The
# shell consumes its typed `Seat::snapshot()` directly, in-process; every section
# is a `Probe` so an absent backend renders honestly (§7). Desktop-shell tier —
# the edge points sideways-inward within the tier (§6), sharing the one `mde-egui`
# toolkit resolution.
mde-seat = { path = "../mde-seat" }

# CURTAIN-3 — the logind session Lock/Unlock listener (`lock_signal.rs`). The
# DM-less shell has no screensaver daemon to catch `loginctl lock-session`, so it
# subscribes to logind's session signals directly over the system bus and drops its
# in-process curtain. mde-seat already builds this exact zbus (5, tokio + blocking
# API), so cargo unifies to one artifact — no new toolchain surface. The match/
# forward is the ONLY direct D-Bus the shell does; every other seat call routes
# through mde-seat (lock 1). Standard `org.freedesktop.login1` interop (§2 FDO
# exception), matching mde-seat's build.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
# BROWSER-DD-9 — the Browser MPRIS bridge owns a tiny current-thread tokio runtime
# for the standard FDO `org.mpris.MediaPlayer2` session-bus service. Browser
# control remains on mde-bus; tokio is only the zbus runtime surface.
tokio = { version = "1", features = ["rt", "time"] }

# BOOKMARKS-6 — the Surface::Browser IPC + shm texture bridge. The shell's `web`
# panel is this crate's first caller: it spawns the sandboxed `mde-web-preview`
# helper per session, drives it over the typed session socket, and uploads each
# paint-ready shm frame to an egui `TextureHandle` (the same decode→upload shape
# the VDI decoder crates use). The edge points sideways-inward within the
# desktop-shell tier (§6), sharing the one `mde-egui` toolkit resolution; it does
# NOT reach the workspace-excluded Servo helper crate — only the shared wire seam.
mde-web-preview-client = { path = "../mde-web-preview-client" }

# BROWSER-DD-2 — live omnibox suggestions from the mesh-hosted SearXNG service.
# The UI drives it on a short-lived blocking thread so egui never stalls, and the
# parsing/throttle logic is unit-tested without live egress. rustls keeps the shell
# off the system OpenSSL surface while matching the workspace's reqwest 0.12 users.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# test-obs-3 — the shell's structured-logging framework. Before this, the 100K-LOC
# desktop tier had NO logger: failures on the DRM seat surfaced only as transient
# toasts or ad-hoc `eprintln!`, so a crash on the bare seat left no persistent,
# filterable trail. `tracing` is the ONE workspace logging choice (mackesd + mde-bus
# + the VDI crates all emit `tracing`), so the shell matches it verbatim rather than
# introducing a second framework. `logging::init()` stands up a single process-wide
# `fmt` subscriber at startup (text on a TTY, JSON under systemd/journald — the exact
# `mackesd` idiom), filtered by `MDE_LOG`/`RUST_LOG`. The `json` feature is the same
# one mackesd already pulls, so cargo unifies to one artifact — no new build surface.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
# The Browser-surface render tests drive a real session over the client's
# in-process fake helper (a socketpair peer publishing a genuine MWP1 shm frame),
# so the panel's paint-ready → texture-upload + crash paths are exercised
# headlessly with no Servo process — the `testkit` feature gates that scaffolding
# out of the release build.
mde-web-preview-client = { path = "../mde-web-preview-client", features = ["testkit"] }

# The Mesh-Map co-editing watch test (EDITOR-COLLAB-3) drains a REAL `Persist`
# spool on a throwaway dir — the same tempdir seam the editor's BusTransport
# round-trip test uses. Already in the workspace lock, no new lock line.
tempfile = "3"

# BOOKMARKS-BAR tests mint real `mde-bookmarks` `AddBookmark` ops (each carrying a
# `Uuid` item id) to build a converged `Collection` fixture the bar folds/mirrors —
# the same uuid the mde-bookmarks API returns. Already in the workspace lock.
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
